# ros2bdi_build_workspace

./: .gitignore  .gitmodules  DockerfileBuildEnv  DockerfileRunEnv  Makefile  README.md  docker-compose.yml  local_simulation_server  local_simulation_server.py
javaff_ws/: .gitignore  build.sh
plansys2_ws/: build.sh
ros2bdi_ws/: Makefile  build.sh  build_all.sh
ros2bdi_ws/src/: .gitignore  ros2_java_desktop.repos
ros2bdi_ws/src-java/: .gitignore  ros2_java_desktop.repos
ros2bdi_ws/src/javaff_interfaces/: CMakeLists.txt  package.xml
ros2bdi_ws/src/javaff_interfaces/msg/: ActionCommittedStatus.msg  ActionExecutionStatus.msg  CommittedStatus.msg  ExecutionStatus.msg  PartialPlan.msg  SearchResult.msg
ros2bdi_ws/src/javaff_interfaces/srv/: JavaFFPlan.srv  UnexpectedState.srv
scripts/: run_on_mac.sh
scripts/forward_service_on_mac/: start.sh
scripts/forward_service_on_ssh/: README.md  docker-compose.yml  start.sh
scripts/forward_service_on_ssh/shared_folder_mount_on_ssh/: Dockerfile
scripts/run_on_ssh/: stop.sh
